--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.32.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
+
